TRAC-10299 fixed issue with nfts not showing

--- a/src/app/collections/change-visibility-dialog/change-visibility-dialog.component.css
+++ b/src/app/collections/change-visibility-dialog/change-visibility-dialog.component.css
@@ -81,18 +81,20 @@
 .radio-group {
   background: transparent !important;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  column-gap: 10px;
+  column-gap: 30px !important;
   border-radius: 0px;
+  width: 300px;
+  max-width: 90%;
 }
 
 .mat-radio-grp {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   column-gap: 10px;
 }
